# starship-jj

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  flake.nix  schema.json  starship-jj.toml
src/: args.rs  config.rs  main.rs  state.rs
src/config/: bookmarks.rs  change.rs  commit.rs  commit_desc.rs  commit_diff.rs  commit_warnings.rs  metrics.rs  state.rs  symbol.rs  util.rs
